# InHandScanningICCV15_Reconstruction

./: CMakeLists.txt  QT_Creator_Project.pro  README.md  READ_ME.txt~  SCRIPT__1__WaterBottle.sh  SCRIPT__1__WaterBottle.sh~  SCRIPT__1__WaterBottleSTEP1.sh  SCRIPT__1__WaterBottleSTEP1.sh~  SCRIPT__2__BowlingPin.sh  SCRIPT__2__BowlingPin.sh~  SCRIPT__3__SmallBottle.sh  SCRIPT__3__SmallBottle.sh~  SCRIPT__4__Sphere.sh  SCRIPT__4__Sphere.sh~
config/: CONFIG_DBG.txt  CONFIG_PARAMs__1__WaterBottle.txt  CONFIG_PARAMs__3__SmallBottle.txt~  CONFIG_PARAMs__4__Sphere.txt~  CONFIG_PATHs.txt  CONFIG_PATHs.txt~  CONFIG_RUN___1___a__local.txt  CONFIG_RUN___1___b__tsdf.txt  CONFIG_RUN___1___c__meshlab.txt  CONFIG_RUN___2___a__local.txt  CONFIG_RUN___2___b__tsdf.txt  CONFIG_RUN___2___c__meshlab.txt  CONFIG_RUN___3___a__local.txt  CONFIG_RUN___3___b__tsdf.txt  CONFIG_RUN___3___c__meshlab.txt  CONFIG_RUN___4___a__local.txt  CONFIG_RUN___4___b__tsdf.txt  CONFIG_RUN___4___c__meshlab.txt  CONFIG_RUN___RELEASE___1___a__local.txt  CONFIG_RUN___RELEASE___1___b__tsdf.txt  CONFIG_RUN___RELEASE___1___c__meshlab.txt  CONFIG_RUN___RELEASE___2___a__local.txt  CONFIG_RUN___RELEASE___2___b__tsdf.txt  CONFIG_RUN___RELEASE___2___c__meshlab.txt  CONFIG_RUN___RELEASE___3___a__local.txt  CONFIG_RUN___RELEASE___3___a__local.txt~  CONFIG_RUN___RELEASE___3___b__tsdf.txt  CONFIG_RUN___RELEASE___3___c__meshlab.txt  CONFIG_RUN___RELEASE___4___a__local.txt  CONFIG_RUN___RELEASE___4___b__tsdf.txt  CONFIG_RUN___RELEASE___4___c__meshlab.txt
include/: animation.h  cameraSet.h  model.h  modelSET.h  registrator.h  renderer.h  robustMatcher.h  sequence.h  skinndetector.h  touch.h
src/: animation.cpp  animation_Files_CompleteSequence.cpp  animation_Touch.cpp  animation_Transform.cpp  cameraSet.cpp  main.cpp  model.cpp  modelSET.cpp  model_Extra_KinematicChain.cpp  model_Extra_SkinningStuff.cpp  model_Mesh.cpp  model_Skeleton.cpp  model_Skin.cpp  registrator.cpp  registrator_0_CONFIGs.cpp  registrator_Help_0_BilateralFiltering.cpp  registrator_Help_1_NormalEstimator.cpp  registrator_Help_2_KeyPointDetection.cpp  registrator_Help_3_FeatureDescription.cpp  registrator_Help_4_CorrEstimRej.cpp  registrator_Help_5_ICP_Refinement.cpp  registrator_Help_6_Filtering_Voxelgrid.cpp  registrator_Help_7_Helpers.cpp  registrator_RegNEW_0_Conv__IMG_2_PCL.cpp  registrator_RegNEW_1_TouchIDs_YYY.cpp  registrator_RegNEW_2_LocAlign.cpp  registrator_RegNEW_4_FUSE_CORRs.cpp  registrator_RegNEW_5_TSDF_local.cpp  registrator_RegNEW_6_MESHLAB.cpp  registrator_RegNEW_6_MESLAB_SCRIPT.mlx  registrator_RegNEW_x_CloudResolution.cpp  renderer.cpp  sequence.cpp  skinn_Detector.cpp  skinn_Detector_DATA.cpp  skinn_Detector_Mixture.cpp  touch.cpp  touch_Correspondences_SKIN.cpp  touch_Detector_Helpers.cpp  touch_Detector_PCLvisible_SKIN.cpp  (+1 more)
